Создано с помощью Colaboratory

--- a/Сафонов_А_А_"Интенсив_8_12_10_12_Домашнее_задание_№1".ipynb
+++ b/Сафонов_А_А_"Интенсив_8_12_10_12_Домашнее_задание_№1".ipynb
@@ -6,6 +6,7 @@
     "colab": {
       "name": "Сафонов А.А.  \"Интенсив 8.12-10.12. Домашнее задание №1\"",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
